# coffee-erp

./: .gitignore  Cargo.toml  Dioxus.toml  Makefile
.github/workflows/: ci.yml
docs/: deployment.md  implementation-plan.md  milestones.md  task-checklist.md  testing-guidelines.md  ui-ux-issues.md
src/: lib.rs  main.rs
src/domain/: agtron.rs  batch_number.rs  brewing_match.rs  inventory.rs  mod.rs  models.rs  seed.rs  validation.rs
src/storage/: indexed_db.rs  mod.rs
src/ui/: catalog_state.rs  inventory_page.rs  mod.rs  today_page.rs
worker/: README.md  package.json  pnpm-lock.yaml  tsconfig.json  wrangler.toml.example
worker/src/: index.test.ts  index.ts
